fix: dollar symbol, image align inside cart-item-row, some more response for components

--- a/src/components/smart/cart-item-row/CartItemRow.module.scss
+++ b/src/components/smart/cart-item-row/CartItemRow.module.scss
@@ -32,12 +32,29 @@
   justify-content: center;
   margin-right: 10px;
 }
+
+.imgWrap {
+  max-width: 100px;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-right: 10px;
+
+  .image {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 4px;
+  }
+}
 .picture {
   width: 100px;
   max-height: 100px;
   object-fit: cover;
 
-  border-radius: 8px;
+  border-radius: 5px;
   margin-right: 10px;
 }
 .information {
@@ -201,12 +218,18 @@
     margin: auto;
   }
 
+  .imgWrap {
+    margin: 0;
+  }
+
   .cartItem {
     width: 100% !important;
     position: relative;
     flex-direction: column;
+    align-items: center;
     margin: 0;
     padding: 3px;
+    border-bottom: none;
   }
   .number {
     position: absolute;
@@ -243,7 +266,8 @@
     text-align: center;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding: 0 5px;
   }
 
   .changeCountBtn {
