--- a/src/components/smart/cart-summary/CartSummary.module.scss
+++ b/src/components/smart/cart-summary/CartSummary.module.scss
@@ -184,6 +184,14 @@
   }
 }
 
+@media (max-width: 768px) {
+  .buy {
+    font-size: 20px;
+    font-weight: 400;
+    padding: 5px 0;
+  }
+}
+
 
 @media (max-width: 639px) {
   .buy {
